--- a/.github/workflows/19350.yml
+++ b/.github/workflows/19350.yml
@@ -54,13 +54,14 @@ jobs:
           export SUBARCH="arm64"
           export PATH="$GITHUB_WORKSPACE/workdir/clang/bin:$GITHUB_WORKSPACE/workdir/gcc/bin:$GITHUB_WORKSPACE/workdir/gcc32/bin:${PATH}"
           export KBUILD_COMPILER_STRING="$($GITHUB_WORKSPACE/workdir/clang/bin/clang --version | head -n 1 | perl -pe 's/\(http.*?\)//gs' | sed -e 's/  */ /g')"
+          export CC=clang
           export CLANG_TRIPLE="aarch64-linux-gnu-"
           export CROSS_COMPILE="aarch64-linux-android-"
           export CROSS_COMPILE_ARM32="arm-linux-androideabi-"
           cd $GITHUB_WORKSPACE/workdir/source
           export OPPO_TARGET_DEVICE="MSM_19350"
-          make O=out oppo6771_19350_defconfig CC=lang
-          make -j$(nproc --all) O=out CC=lang
+          make O=out oppo6771_19350_defconfig
+          make -j$(nproc --all) O=out
 
       - name: Check a kernel output files
         run: |
